--- a/views/twelve.haml
+++ b/views/twelve.haml
@@ -1,8 +1,56 @@
 #twelve.panel.img
-  .twelve-container
-    %table.twelve-nav
-      %tr
-        %td.twelve-link ARRIVAL
-        %td.twelve-link PREPARATION
-        %td.twelve-link THE CAMP
-        %td.twelve-link REFLECTIONS
+  #fancy-overlay
+  %table.twelve-nav.js-nav{:target => "2"}
+    %tr
+      %td.twelve-link 
+        %a.fancybox-thumb{:rel=>'all', :href=>'/images/2012/arrival/1.jpg', :caption => 'First team members await the arrival of others at Narita Airport, Tokyo.'}
+          ARRIVAL
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/arrival/2.jpg', :caption => 'After a long day at the airport, the team travels into the city for a first night in Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/arrival/3.jpg', :caption => 'Andrew Nagl (Photographer) captures the Tokyo Metro in all its efficient glory.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/arrival/4.jpg', :caption => 'City night-scape from the Benesse offices, Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/arrival/5.jpg', :caption => 'Winding roads, view from Loftwork offices, Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/arrival/6.jpg', :caption => 'Dusk at Shibuya Crossing, Tokyo.'}
+
+      %td.twelve-link 
+        %a.fancybox-thumb{:rel=>'all', :href=>'/images/2012/bonding/1.jpg', :caption => 'A first stab at Udon noodles, Tokyo.'}
+          PREPARATION
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/bonding/2.jpg', :caption => 'Putting heads together before a firs meeting with tentative GAKKO students, Benesse offices, Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/bonding/3.jpg', :caption => 'Andrew Nagl (Photographer) and Kenta Koga (Director) discuss the beauty of the Japanese aesthetic, Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/bonding/4.jpg', :caption => 'Geoffrey Van and Evan Mullen (Sempais) bounce ideas about the curriculum for their art class, Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/bonding/5.jpg', :caption => 'Figuring out how to best conduct a Kohai smoothie competition, Loftwork offices, Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/bonding/6.jpg', :caption => 'Culinary collaboration at its best, Loftwork offices, Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/prep/1.jpg', :caption => 'Carl Sandberg (Sempai) gets hip to the curation behind this Middle Eastern art exhibit, Mori Art Museum, Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/prep/2.jpg', :caption => 'Geoffrey Van (Sempai) takes in beautiful photographic work with an eye towards his art class, Mori Art Museum, Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/prep/3.jpg', :caption => 'Carl Sandberg (Sempai) supports a student in her pre-camp presentation on ways to improve the Japanese education system, Benesse offices, Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/prep/4.jpg', :caption => 'Zoë Hitzig and Caroline Lester (Sempais) add a fun edge to their personal writing class, Loftwork offices, Tokyo.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/prep/5.jpg', :caption => 'Camp schedules designed by Max Pommier (Visual Designer, Sempai).'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/prep/6.jpg', :caption => 'Max Pommier (Visual Designer, Sempai) puts final touches on a plan for his design class, Loftwork offices, Tokyo.'}
+
+      %td.twelve-link 
+        %a.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/1.jpg', :caption => 'Amelia Earnest and Carl Sandberg (Sempais) kick things off on Day 1 with their class on education and pedagogy, Benesse offices, Okayama Prefecture.'}
+          THE CAMP
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/2.jpg', :caption => 'GAKKO staff sternly judge the meet and greet smoothie competition, Benesse offices, Okayama Prefecture.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/3.jpg', :caption => 'Kohai explore patterns in international education development, Benesse offices, Okayama Prefecture.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/3b.jpg', :caption => 'Kohai quickly adopted the round-table discussion style in their first moments on Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/4.jpg', :caption => 'World-class magician Tomo Maeda wows Kohai and Sempai alike in his "Art of Surprise" class, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/5.jpg', :caption => 'Sei Saito (Kohai) gets a warm wave of support in a first go at public speaking, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/6.jpg', :caption => 'Florian Koenigsberger (Sempai) warms up Kohai with an acting exercise before a class on public speaking and self-expression, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/7.jpg', :caption => 'Kohai crowd around for a class session led via Google Hangout, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/8.jpg', :caption => 'Kenta Koga (director) talks over the camp with guests Tomo Maeda, Hiyashi Chiaki and Lisa Katayama, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/9.jpg', :caption => 'Yuta Koga (Kohai) jets ahead in the Idea Relay activity, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/10.jpg', :caption => 'One Kohai shows his skill at the talent show with his "Assatte!" performance, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/11.jpg', :caption => 'Kohai, Sempai and guests alike stand with visiting speaker Fumio Nanjo, director of the Mori Art Museum, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/12.jpg', :caption => 'The fruit of Maeda-san\'s "Art of Surprise" class presented to Chiaki-san, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/13.jpg', :caption => 'Team Pterodactyl show off their idea for the business competition, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/14.jpg', :caption => 'Carl Sandberg (Sempai) and Kaho Arakawa (Kohai) pause to reflect on day\'s museum visits, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/15.jpg', :caption => 'One team gets pumped up before final presentations to the camp, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/16.jpg', :caption => 'Pre-competition jitters, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/camp/17.jpg', :caption => 'Caroline Lester (Sempai) works with Kohai to perfect his personal writing, Naoshima Island.'}
+
+      %td.twelve-link 
+        %a.fancybox-thumb{:rel=>'all', :href=>'/images/2012/reflections/1.jpg', :caption => 'Kohai were asked to find a space alone and reflect upon their time in writing, Naoshima Island.'}
+          REFLECTIONS
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/reflections/2.jpg', :caption => 'Kenta Koga (Director) watches on as the camp comes to a close, Naoshima Island.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/reflections/3.jpg', :caption => 'Kohai\'s shirts filled with memories of their time on Naoshima.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/reflections/4.jpg', :caption => 'Evan Mullen and Geoffrey Van (Sempai) say a last goodbye to Naoshima.'}
+        %a.hide.fancybox-thumb{:rel=>'all', :href=>'/images/2012/reflections/5.jpg', :caption => 'A last sunset over Naoshima Island.'}
