--- a/views/scss/about.scss
+++ b/views/scss/about.scss
@@ -70,7 +70,8 @@ $circle: 160px;
   border-radius: $circle;
   padding: $circle/4;
   // Which makes width actually $circle * 1.5
-  text-align: center;
+  // text-align: center;
+  text-indent: 40px;
   cursor: pointer;
   z-index: 0;
   &.camp {
@@ -84,6 +85,7 @@ $circle: 160px;
   &.tank {
     top: $circle * 1;
     left: $circle * 0.75;
+    text-indent: 10px;
   }
   &:hover {
     z-index: 1;
@@ -112,6 +114,7 @@ $overlayOffset: ($circle - $overlay) * 0.5;
   padding: $circle/4; 
   color: white;
   text-align: left;
+  text-indent: 0;
   background-color: rgba($about-blue, 1);
   z-index: 10;
   opacity: 0;
