--- a/views/scss/style.scss
+++ b/views/scss/style.scss
@@ -1,4 +1,5 @@
-@import 'bourbon/bourbon';
+@import "bourbon/bourbon";
+@import "fancybox_override";
 
 /* Global Variables */
 $font: 12px;
@@ -46,7 +47,7 @@ a {
 /* Nav */
 #nav-container {
   position: fixed;
-  z-index: 100;
+  z-index: 5;
 }
 
 #nav-logo {
@@ -56,6 +57,7 @@ a {
   min-width: 150px;
   right: 0;
   bottom: 0;
+  z-index: 6;
 }
 
 .nav-piece {
@@ -69,19 +71,18 @@ a {
 .nav-caption {
   position: fixed;
   color: white;
-  opacity: 0.9;
+  opacity: 0.99; // To make it not so bold
   font-weight: normal;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
   padding: 5px 3px 0 3px;
+  z-index: 10;
   &.dark {
     color: $brown;
+    text-shadow: none;
   }
   &.highlight {
     color: $red;
     opacity: 1;
-    $highlight: rgba(white, 0.5); 
-    // background-color: $highlight;
-    // @include box-shadow(0 0 5px 0 $highlight);
   }
   @include transition(color 0.2s);
 }
