--- a/views/scss/twelve.scss
+++ b/views/scss/twelve.scss
@@ -1,27 +1,35 @@
 $twelve-circle: 200px;
 
-.twelve-container {
+.twelve-nav {
   position: relative;
   width: 960px;
-  margin: 0 auto;
-  padding: 50px 0;
+  margin: 50px auto 0;
   font: normal 30pt "PT Sans";
-}
-
-.twelve-nav {
-  width: 100%;
+  text-align: center;
+  z-index: 10;
 }
 
 .twelve-link {
-  color: rgba(white, 0.5);
-  cursor: pointer;
-  // text-shadow: 0 1px 1px rgba(black, 0.25);
-  &:hover {
-    color: rgba(white, 0.8);
+  > a {
+    color: rgba(white, 0.5);
+    &:hover {
+      color: rgba(white, 0.8);
+      text-decoration: none;
+    }
   }
-  &.selected {
+  &.selected > a {
     color: rgba(white, 1);
     // text-shadow: none; //0 1px 1px rgba(black, 0.25);
   }
   @include transition(color 0.2s);
+}
+
+
+#fancy-overlay {
+  position: absolute;
+  width: 100%; height: 100%;
+  left: 0; top: 0;
+  z-index: 9;
+  background-color: rgba(black, 0.7);
+  display: none;
 }
