--- a/views/about.haml
+++ b/views/about.haml
@@ -9,20 +9,16 @@
 
     .about-content.mission.shown
       .about-left
-        %p Our mission is to make a great many rainbows in the hearts of all children everywhere.
+        %p Mission content
     .about-content.philosophy
       .about-left
-        %p 
-          We believe that...
-          %a{:href => "http://www.youtube.com/watch?v=OQSNhk5ICTI"} DOUBLE RAINBOWWWWW
+        %p Philosophy content
     .about-content.today
       .about-left
-        %p Content for gakko, today, tomorrow and WHENEVA
+        %p Content for GAKKO, today.
     .about-content.vision
       .about-left
-        %p We all love schools and envision changing the world for many people one day.
-        %p In particular, we would like everyone in schools to upgrade to #3 pencils; it's about time. Also students should learn always in a handstand position so their heads can have more blood to think with.
-        %p These are just some of the small, but grand reforms we have planned. Once our tanks (see THINK TANK circle) take over the world, implementing our ideals will be easy as pi.
+        %p Vision content.
       .about-right
         .circle.camp
           .circle-text
