--- a/views/connect.haml
+++ b/views/connect.haml
@@ -9,21 +9,22 @@
       shoot us an email (
       %a{:href => "mailto:contact@gakkoproject.com", :target => "_blank"}> contact@gakkoproject.com
       ) or sign up for GAKKO email updates.
-    %table.connect-bar
-      %tr
-        %td.connect-icon-container
-          %a{:href => "https://www.facebook.com/GAKKOPROJECT", :target => "_blank"}
-            .connect-icon.fb.inactive
-            .connect-icon.fb.active
-        %td.connect-icon-container
-          %a{:href => "https://twitter.com/gakkoproject", :target => "_blank"}
-            .connect-icon.twitter.inactive
-            .connect-icon.twitter.active
-        %td.connect-icon-container
-          %a{:href => "mailto:contact@gakkoproject.com", :target => "_blank"}
-            .connect-icon.email.inactive
-            .connect-icon.email.active
-        %td.connect-signup
-          %input{:type => "text", :placeholder => "EMAIL ADDRESS", :target => "_blank"}
-        %td.connect-signup-button 
-          %p SIGN UP
+    %form#mc-embedded-subscribe-form.validate{:action => "http://gakko2012.us4.list-manage.com/subscribe/post?u=fa4319fecd8b40e74b6a3ee7b&id=b880ebf6bb", :method => "post", :name => "mc-embedded-subscribe-form", :novalidate => "", :target => "_blank"}  
+      %table.connect-bar
+        %tr
+          %td.connect-icon-container
+            %a{:href => "https://www.facebook.com/GAKKOPROJECT", :target => "_blank"}
+              .connect-icon.fb.inactive
+              .connect-icon.fb.active
+          %td.connect-icon-container
+            %a{:href => "https://twitter.com/gakkoproject", :target => "_blank"}
+              .connect-icon.twitter.inactive
+              .connect-icon.twitter.active
+          %td.connect-icon-container
+            %a{:href => "mailto:contact@gakkoproject.com", :target => "_blank"}
+              .connect-icon.email.inactive
+              .connect-icon.email.active
+          %td.connect-signup
+            %input#mce-EMAIL.email{:name => "EMAIL", :placeholder => "EMAIL ADDRESS", :required => "", :type => "email", :value => ""}
+          %td
+            %input#mc-embedded-subscribe.connect-signup-button{:name => "subscribe", :type => "submit", :value => "Subscribe"}/
