--- a/views/scss/connect.scss
+++ b/views/scss/connect.scss
@@ -20,16 +20,31 @@ $connect-grey: rgba(#2B2E31, 0.7);
     position: relative;
   }
   input {
-    width: 90%;
-    padding: 6px;
     margin: 0;
     font-size: 14px;
-    color: $connect-grey;
-    background-color: rgba(white, 0.7);
-    border: 1pt solid #ccc;
     vertical-align: baseline;
+    &[type=email] {
+      width: 90%;
+      padding: 6px;
+      color: $connect-grey;
+      background-color: rgba(white, 0.7);
+      border: 1pt solid #ccc;
+      @include transition(border 0.2s, box-shadow 0.2s);
+    }
+    &[type=submit] {
+      background-color: $connect-grey;
+      color: #EDE0DA;
+      text-align: center;
+      cursor: pointer;
+      font-size: 16px;
+      width: 100%;
+      height: 100%;
+      border: none;
+      &:hover {
+        background-color: darken($connect-grey, 20%);
+      }
+    }
     // @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075));
-    @include transition(border 0.2s, box-shadow 0.2s);
     &:focus {
       border-color: rgba($red, 0.8);
       outline: 0;
@@ -92,14 +107,6 @@ $connect-grey: rgba(#2B2E31, 0.7);
 }
 
 .connect-signup-button {
-  background-color: $connect-grey;
-  color: #EDE0DA;
-  text-align: center;
-  cursor: pointer;
-  font-size: 16px;
-  width: 80px;
-  &:hover {
-    background-color: darken($connect-grey, 20%);
-  }
+  
   @include transition(background-color 0.2s);
 }
