--- a/views/scss/fancybox_override.scss
+++ b/views/scss/fancybox_override.scss
@@ -37,7 +37,7 @@ $f-size: 50px;
 .fancybox-close {
   position: fixed;
   top: 40px;
-  right: 5%;
+  right: 60px;
   opacity: 0.5;
   background-image: url(/images/icons/fancybox-close.png);
   background-size: contain;
